# apt-log

./: README.md  noxfile.py  pyproject.toml  setup.py
apt_log/: __init__.py  cli.py  log.py
apthistory/: __init__.py
tests/: log_test.py  reader_test.py
